# icd_42_ros

./: CMakeLists.txt  README.md  package.xml
launch/: inst42.launch  main.launch
src/: IcdNode.cpp  Main42.c
